[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/stone.png" type="Texture" id=1]
[ext_resource path="res://entities/bosses/projectiles/GolemBossStoneProjectile.gd" type="Script" id=2]
[ext_resource path="res://assets/PARTICLES/light.png" type="Texture" id=3]
[ext_resource path="res://entities/bosses/projectiles/Hitbox.gd" type="Script" id=4]
[ext_resource path="res://assets/stone_explosion_anim-Sheet.png" type="Texture" id=5]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.267045 ), 0.0, 2.28016, 0, 0, Vector2( 1, 0 ), -3.67203, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 128, 0, 1 )
flag_disable_z = true
gravity = Vector3( 0, -1000, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 100.0
radial_accel_random = 0.55
scale = 1.5
scale_curve = SubResource( 4 )
color = Color( 0.705882, 0.65098, 0.501961, 1 )

[sub_resource type="CircleShape2D" id=1]
radius = 13.0096

[sub_resource type="SegmentShape2D" id=7]
b = Vector2( 52, 0 )

[sub_resource type="Animation" id=2]
resource_name = "DEFAULT"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0, -5.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Explosion"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosion:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="GolemBossStoneProjectile" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -3.5, -11 )
scale = Vector2( 0.1, 0.1 )
amount = 16
speed_scale = 2.0
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Explosion" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )
hframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="." groups=["attack"]]
visible = false
collision_layer = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -1, -1.5 )
shape = SubResource( 1 )

[node name="ExplosionTerrainHitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionTerrainHitbox"]
position = Vector2( -25.5, 13.5 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/DEFAULT = SubResource( 2 )
anims/Explosion = SubResource( 6 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="ExplosionTerrainHitbox" to="." method="_on_ExplosionTerrainHitbox_body_entered"]
